--- a/app/globals.css
+++ b/app/globals.css
@@ -47,15 +47,18 @@ html {
   overflow-x: hidden;
 }
 
-body::-webkit-scrollbar {
+body::-webkit-scrollbar,
+.full-search::-webkit-scrollbar {
   width: .5em;
 }
 
-body::-webkit-scrollbar-track {
+body::-webkit-scrollbar-track,
+.full-search::-webkit-scrollbar-track {
   box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.3);
 }
 
-body::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb,
+.full-search::-webkit-scrollbar-thumb {
   background-color: #58372B;
   outline: none;
 }
