--- a/app/politicas-de-privacidade/styles.css
+++ b/app/politicas-de-privacidade/styles.css
@@ -1,5 +1,5 @@
 .policy-page .policy-title,
-.policy-page .policy-policy-content{
+.policy-page .policy-content{
     @apply
     max-w-[1260px] mx-auto
 }
@@ -14,25 +14,25 @@
     text-[20px] lg:text-[36px] text-darda3
 }
 
-.policy-page .policy-policy-content{
+.policy-page .policy-content{
     @apply
     mb-28 px-4 2xl:px-0
 }
 
-.policy-page .policy-policy-content .text h2,
-.policy-page .policy-policy-content .text h3,
-.policy-page .policy-policy-content .textt h4,
-.policy-page .policy-policy-content .text h5{
+.policy-page .policy-content .text h2,
+.policy-page .policy-content .text h3,
+.policy-page .policy-content .textt h4,
+.policy-page .policy-content .text h5{
     @apply
     text-dardaGray3 mb-12 lg:mb-8 text-[20px] font-bold
 }
 
-.policy-page .policy-policy-content .text p{
+.policy-page .policy-content .text p{
     @apply
     text-dardaGray5 mb-2 text-lg
 }
 
-.policy-page .policy-policy-content .text p li{
+.policy-page .policy-content .text p li{
     @apply
     pl-2 lg:pl-12
 }
