--- a/app/components/footer/styles.css
+++ b/app/components/footer/styles.css
@@ -93,10 +93,15 @@
 
 .footer .footer-right .footer-right-content p{
     @apply
-    text-dardaGray1 text-sm
+    text-dardaGray1 text-xs md:text-sm
 }
 
 .footer .footer-detail{
     @apply
     bg-darda3 w-full h-[8px]
+}
+
+.footer .footer-right-content svg{
+    @apply
+    w-[70px] md:w-[80px]
 }
