--- a/app/components/ui/entepriseContactCta/styles.css
+++ b/app/components/ui/entepriseContactCta/styles.css
@@ -1,8 +1,8 @@
 .enteprise-contact-cta{
-    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    box-shadow: 0 0 5px rgba(0,0,0,0.1);
 
     @apply
-    absolute top-[650px] bg-dardaGray1 z-40 p-8 pb-4 rounded-lg w-full max-w-[400px] flex flex-col gap-4 z-40 
+    absolute top-[650px] bg-white z-40 p-8 pb-4 rounded-lg w-full max-w-[400px] flex flex-col gap-4 z-20 
 }
 
 .enteprise-contact-cta h2{
@@ -19,7 +19,7 @@
     margin-bottom:0px!important;
 
     @apply
-    hidden lg:block
+    hidden lg:block text-darda3 text-sm
 }
 
 .enteprise-contact-cta .container-buttons button{
@@ -35,7 +35,7 @@
 
 .enteprise-contact-cta .container-buttons{
     @apply
-    flex flex-row lg:flex-col gap-4
+    flex flex-row lg:flex-col gap-2
 }
 
 @media(max-width:1024px){
