--- a/app/globals.css
+++ b/app/globals.css
@@ -47,7 +47,10 @@ html {
   overflow-x: hidden;
 }
 
-body::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  width: 0;
+}
+
 .full-search::-webkit-scrollbar {
   width: .5em;
 }
@@ -57,7 +60,7 @@ body::-webkit-scrollbar-track,
   box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.3);
 }
 
-body::-webkit-scrollbar-thumb,
+body::-webkit-scrollbar-thumb {}
 .full-search::-webkit-scrollbar-thumb {
   background-color: #58372B;
   outline: none;
