--- a/app/components/ui/entepriseContactCta/styles.css
+++ b/app/components/ui/entepriseContactCta/styles.css
@@ -2,7 +2,7 @@
     box-shadow: 0 0 5px rgba(0,0,0,0.1);
 
     @apply
-    absolute top-[650px] bg-white z-40 p-8 pb-4 rounded-lg w-full max-w-[400px] flex flex-col gap-4 z-20 
+    absolute top-[650px] bg-white p-8 pb-4 rounded-lg w-full max-w-[400px] flex flex-col gap-4 z-40
 }
 
 .enteprise-contact-cta h2{
@@ -41,7 +41,7 @@
 @media(max-width:1024px){
     .enteprise-contact-cta.mobile{
         @apply
-        fixed bottom-0 left-0 w-full max-w-full top-auto gap-2
+        fixed bottom-0 left-0 w-full max-w-full top-auto gap-2 px-4
     }
 
     .enteprise-contact-cta .container-buttons a{
